Editing cover page and adding icons to main navigation

--- a/home.html
+++ b/home.html
@@ -6,10 +6,9 @@
 -->
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title>Mariko and Kenneth are getting married</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Mariko and Kenneth are getting married</title>
     <meta name="description" content="'Choose a seat not a side. We’re all family once the knot is tied.' - Your invited to Kenneth and Mariko's wedding. Here you will find all of the information necessary for our wedding. if you have any qeustions regarding the cermony, please feel free to contact us via email or in person.">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -30,12 +29,12 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="home.html">Home</a></li>
-											<li><a href="#">Our story</a></li>
-											<li><a href="#">The ceremony</a></li>
-											<li><a href="#">Map</a></li>
-											<li><a href="#">Gift registration</a></li>
-                      <li><a href="#">Contact us</a></li>
+											<li><a href="home.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+											<li><a href="#"><i class="fa fa-heart" aria-hidden="true"></i> Our story</a></li>
+											<li><a href="#"><i class="fa fa-glass" aria-hidden="true"></i> The ceremony</a></li>
+											<li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i> Map</a></li>
+											<li><a href="#"><i class="fa fa-gift" aria-hidden="true"></i> Gift registration</a></li>
+                      <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> Contact us</a></li>
 										</ul>
 									</div>
 								</li>
@@ -46,7 +45,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<p>The wedding celebration of</p>
+							<p><img src="images/puffin.svg" alt="Puffin" class="puffin"><br /><img src="images/title-underline.svg" alt="Title underline" class="title-underline"><br />The wedding celebration of</p>
 							<h2>Mariko &amp; Kenneth</h2>
   						<p>August 26, 2016</p>
 						</div>
@@ -56,17 +55,38 @@
 				<!-- One -->
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
-							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+							<header class="major our-story">
+								<h2>Our story</h2>
+
+								<!-- Timeline -->
+								<div id="cd-timeline">
+									<div class="cd-timeline-block">
+										<div class="cd-timeline-img">
+											<img src="images/puffin.svg" alt="Picture">
+										</div> <!-- cd-timeline-img -->
+
+										<div class="cd-timeline-content">
+											<h2>Title of section 1</h2>
+											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+											<a href="#0" class="cd-read-more">Read more</a>
+											<span class="cd-date">Jan 14</span>
+										</div> <!-- cd-timeline-content -->
+									</div> <!-- cd-timeline-block -->
+
+									<div class="cd-timeline-block">
+										<!-- ... -->
+									</div>
+								</div>
+								<!-- END Timeline -->
+
 							</header>
+							<!--
 							<ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
 								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
 								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
 							</ul>
+							-->
 						</div>
 					</section>
 
@@ -144,6 +164,7 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/modernizr.js"></script>
 			<script src="assets/js/main.js"></script>
 
 	</body>
