Update header page

--- a/home.html
+++ b/home.html
@@ -45,9 +45,10 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<p><img src="images/puffin.svg" alt="Puffin" class="puffin"><br /><img src="images/title-underline.svg" alt="Title underline" class="title-underline"><br />The wedding celebration of</p>
+							<p><img src="images/puffin.svg" alt="Puffin" class="puffin"><br /><img src="images/title-underline.svg" alt="Title underline" class="title-underline"></p>
 							<h2>Mariko &amp; Kenneth</h2>
-  						<p>August 26, 2016</p>
+							<p>INVITE YOU TO THERE WEDDING CELEBRATION</p>
+							<p>AUGUST 26, 2016 | ISSAQUAH, WA
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
