Adding header bottom to website

--- a/home.html
+++ b/home.html
@@ -48,11 +48,11 @@
 							<p><img src="images/puffin.svg" alt="Puffin" class="puffin"><br /><img src="images/title-underline.svg" alt="Title underline" class="title-underline"></p>
 							<h2>Mariko &amp; Kenneth</h2>
 							<p>INVITE YOU TO THERE WEDDING CELEBRATION</p>
-							<p>AUGUST 26, 2016 | ISSAQUAH, WA
+							<p>AUGUST 26, 2016 | ISSAQUAH, WA</p>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<!--<a href="#one" class="more scrolly">Learn More</a>-->
+						<img src="images/header-bottom.svg" class="header-bottom">
 					</section>
-
 				<!-- One -->
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
