Fixing up header. Also adding some detail to the my story section

--- a/home.html
+++ b/home.html
@@ -53,10 +53,21 @@
 						<!--<a href="#one" class="more scrolly">Learn More</a>-->
 						<img src="images/header-bottom.svg" class="header-bottom">
 					</section>
+
 				<!-- One -->
-					<section id="one" class="wrapper style1 special">
+					<section id="one" class="wrapper special our-story">
 						<div class="inner">
-							<header class="major our-story">
+							<header class="major">
+
+								<div class="seilie-family">
+									BRIDE'S FAMILY<br/><img src="images/right-arrow.svg" alt="Right arrow"><br /><em>Mr. + Mrs. Seilie</em>
+								</div>
+								<div class="ishikawa-family">
+									GROOM'S FAMILY<img src="images/left-arrow.svg" alt="Left arrow"><br><em>Mr. + Mrs. Ishikawa</em>
+								</div>
+
+								<img src="images/story-top.svg" alt="Story top decoration">
+
 								<h2>Our story</h2>
 
 								<!-- Timeline -->
