--- a/home.html
+++ b/home.html
@@ -51,22 +51,21 @@
 							<p>AUGUST 26, 2016 | ISSAQUAH, WA</p>
 						</div>
 						<!--<a href="#one" class="more scrolly">Learn More</a>-->
-						<img src="images/header-bottom.svg" class="header-bottom">
 					</section>
+
+					<!--
+					<section class="wrapper special family">
+						<div class="inner">
+							<div class="seilie-family">BRIDE'S FAMILY<hr /><em>Mr. + Mrs. Seilie</em></div>
+							<div class="ishikawa-family">GROOM'S FAMILY<hr /><em>Mr. + Mrs. Ishikawa</em></div>
+						</div>
+					</section>
+					-->
 
 				<!-- One -->
 					<section id="one" class="wrapper special our-story">
 						<div class="inner">
 							<header class="major">
-
-								<div class="seilie-family">
-									BRIDE'S FAMILY<br/><img src="images/right-arrow.svg" alt="Right arrow"><br /><em>Mr. + Mrs. Seilie</em>
-								</div>
-								<div class="ishikawa-family">
-									GROOM'S FAMILY<img src="images/left-arrow.svg" alt="Left arrow"><br><em>Mr. + Mrs. Ishikawa</em>
-								</div>
-
-								<img src="images/story-top.svg" alt="Story top decoration">
 
 								<h2>Our story</h2>
 
