Adding more styles to our story section

--- a/home.html
+++ b/home.html
@@ -73,18 +73,27 @@
 								<div id="cd-timeline">
 									<div class="cd-timeline-block">
 										<div class="cd-timeline-img"></div>
-										<!-- cd-timeline-img -->
-
 										<div class="cd-timeline-content">
-											<h2>Title of section 1</h2>
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-											<span class="cd-date">Jan 14</span>
+											<h2>Cafe hopping</h2>
+											<span class="cd-date">Aug 24, 2012</span>
 										</div> <!-- cd-timeline-content -->
 									</div> <!-- cd-timeline-block -->
 
 									<div class="cd-timeline-block">
-										<!-- ... -->
-									</div>
+										<div class="cd-timeline-img"></div>
+										<div class="cd-timeline-content">
+											<h2>Will you go out with me?</h2>
+											<span class="cd-date">Oct 20, 2012</span>
+										</div> <!-- cd-timeline-content -->
+									</div> <!-- cd-timeline-block -->
+
+									<div class="cd-timeline-block">
+										<div class="cd-timeline-img"></div>
+										<div class="cd-timeline-content">
+											<h2>Terrifying first date</h2>
+											<span class="cd-date">Oct 27, 2012</span>
+										</div> <!-- cd-timeline-content -->
+									</div> <!-- cd-timeline-block -->
 								</div>
 								<!-- END Timeline -->
 
