Adding more text to our story. Also adding coffee mug and forest bg to this section.

--- a/home.html
+++ b/home.html
@@ -94,9 +94,64 @@
 											<span class="cd-date">Oct 27, 2012</span>
 										</div> <!-- cd-timeline-content -->
 									</div> <!-- cd-timeline-block -->
+
+									<div class="cd-timeline-block">
+										<div class="cd-timeline-img"></div>
+										<div class="cd-timeline-content">
+											<h2>Vroom vroom to Canada</h2>
+											<span class="cd-date">Apr 15, 2013</span>
+										</div> <!-- cd-timeline-content -->
+									</div> <!-- cd-timeline-block -->
+
+									<div class="cd-timeline-block">
+										<div class="cd-timeline-img"></div>
+										<div class="cd-timeline-content">
+											<h2>Will you marry me?</h2>
+											<span class="cd-date">Aug 3, 2014</span>
+										</div> <!-- cd-timeline-content -->
+									</div> <!-- cd-timeline-block -->
+
+									<div class="cd-timeline-block">
+										<div class="cd-timeline-img"></div>
+										<div class="cd-timeline-content">
+											<h2>To the land of fire and ice</h2>
+											<span class="cd-date">Aug 3 - Aug 10, 2014</span>
+										</div> <!-- cd-timeline-content -->
+									</div> <!-- cd-timeline-block -->
+
+									<div class="cd-timeline-block">
+										<div class="cd-timeline-img"></div>
+										<div class="cd-timeline-content">
+											<h2>Meeting of the families</h2>
+											<span class="cd-date">Aug 30, 2014</span>
+										</div> <!-- cd-timeline-content -->
+									</div> <!-- cd-timeline-block -->
+
+									<div class="cd-timeline-block">
+										<div class="cd-timeline-img"></div>
+										<div class="cd-timeline-content">
+											<h2>Bier! Und du? </h2>
+											<span class="cd-date">Sep 24 - Oct 3, 2015</span>
+										</div> <!-- cd-timeline-content -->
+									</div> <!-- cd-timeline-block -->
+
+									<div class="cd-timeline-block">
+										<div class="cd-timeline-img"></div>
+										<div class="cd-timeline-content">
+											<h2>Wedding</h2>
+											<span class="cd-date">Aug 26, 2016</span>
+										</div> <!-- cd-timeline-content -->
+									</div> <!-- cd-timeline-block -->
+
+									<div class="cd-timeline-block">
+										<div class="cd-timeline-img"></div>
+										<div class="cd-timeline-content">
+											<h2>... more adventures await</h2>
+										</div> <!-- cd-timeline-content -->
+									</div> <!-- cd-timeline-block -->
+
 								</div>
 								<!-- END Timeline -->
-
 							</header>
 							<!--
 							<ul class="icons major">
@@ -106,10 +161,11 @@
 							</ul>
 							-->
 						</div>
+						<img src="images/coffee-mug.svg" alt="Coffee mug" class="coffee-mug" />
 					</section>
 
 				<!-- Three -->
-					<section id="three" class="wrapper style3 special">
+					<section id="three" class="wrapper style3 special ceremony">
 						<div class="inner">
 							<header class="major">
 								<h2>Accumsan mus tortor nunc aliquet</h2>
@@ -127,18 +183,6 @@
 								</li>
 								<li class="icon fa-code">
 									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-headphones">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-heart-o">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-flag-o">
-									<h3>Tortor Ut</h3>
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
 							</ul>
