--- a/home.html
+++ b/home.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="'Choose a seat not a side. We’re all family once the knot is tied.' - Your invited to Kenneth and Mariko's wedding. Here you will find all of the information necessary for our wedding. if you have any qeustions regarding the cermony, please feel free to contact us via email or in person.">
+		<link rel="shortcut icon" href="favicon.ico">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
@@ -132,6 +133,80 @@
 										<div class="cd-timeline-content">
 											<h2>Bier! Und du? </h2>
 											<span class="cd-date">Sep 24 - Oct 3, 2015</span>
+											<p>
+												<a href="images/our-story/germany/DSC03882.JPG"><img src="images/our-story/germany/DSC03882.JPG" /></a>
+												<a href="images/our-story/germany/DSC03884.JPG"><img src="images/our-story/germany/DSC03884.JPG" /></a>
+												<a href="images/our-story/germany/DSC03887.JPG"><img src="images/our-story/germany/DSC03887.JPG" /></a>
+												<a href="images/our-story/germany/DSC03908.JPG"><img src="images/our-story/germany/DSC03908.JPG" /></a>
+												<a href="images/our-story/germany/DSC03930.JPG"><img src="images/our-story/germany/DSC03930.JPG" /></a>
+												<a href="images/our-story/germany/DSC03967.JPG"><img src="images/our-story/germany/DSC03967.JPG" /></a>
+												<a href="images/our-story/germany/DSC03969.JPG"><img src="images/our-story/germany/DSC03969.JPG" /></a>
+												<a href="images/our-story/germany/DSC03997.JPG"><img src="images/our-story/germany/DSC03997.JPG" /></a>
+												<a href="images/our-story/germany/DSC04011.JPG"><img src="images/our-story/germany/DSC04011.JPG" /></a>
+												<a href="images/our-story/germany/DSC04014.JPG"><img src="images/our-story/germany/DSC04014.JPG" /></a>
+												<a href="images/our-story/germany/DSC04042.JPG"><img src="images/our-story/germany/DSC04042.JPG" /></a>
+												<a href="images/our-story/germany/DSC04095.JPG"><img src="images/our-story/germany/DSC04095.JPG" /></a>
+												<a href="images/our-story/germany/DSC04098.JPG"><img src="images/our-story/germany/DSC04098.JPG" /></a>
+												<a href="images/our-story/germany/DSC04103.JPG"><img src="images/our-story/germany/DSC04103.JPG" /></a>
+												<a href="images/our-story/germany/DSC04132.JPG"><img src="images/our-story/germany/DSC04132.JPG" /></a>
+												<a href="images/our-story/germany/DSC04134.JPG"><img src="images/our-story/germany/DSC04134.JPG" /></a>
+												<a href="images/our-story/germany/DSC04163.JPG"><img src="images/our-story/germany/DSC04163.JPG" /></a>
+												<a href="images/our-story/germany/DSC04255.JPG"><img src="images/our-story/germany/DSC04255.JPG" /></a>
+												<a href="images/our-story/germany/DSC04256.JPG"><img src="images/our-story/germany/DSC04256.JPG" /></a>
+												<a href="images/our-story/germany/DSC04259.JPG"><img src="images/our-story/germany/DSC04259.JPG" /></a>
+												<a href="images/our-story/germany/DSC04261.JPG"><img src="images/our-story/germany/DSC04261.JPG" /></a>
+												<a href="images/our-story/germany/DSC04279.JPG"><img src="images/our-story/germany/DSC04279.JPG" /></a>
+												<a href="images/our-story/germany/DSC04295.JPG"><img src="images/our-story/germany/DSC04295.JPG" /></a>
+												<a href="images/our-story/germany/DSC04296.JPG"><img src="images/our-story/germany/DSC04296.JPG" /></a>
+												<a href="images/our-story/germany/DSC04297.JPG"><img src="images/our-story/germany/DSC04297.JPG" /></a>
+												<a href="images/our-story/germany/DSC04311.JPG"><img src="images/our-story/germany/DSC04311.JPG" /></a>
+												<a href="images/our-story/germany/DSC04313.JPG"><img src="images/our-story/germany/DSC04313.JPG" /></a>
+												<a href="images/our-story/germany/DSC04346.JPG"><img src="images/our-story/germany/DSC04346.JPG" /></a>
+												<a href="images/our-story/germany/DSC04349.JPG"><img src="images/our-story/germany/DSC04349.JPG" /></a>
+												<a href="images/our-story/germany/DSC04356.JPG"><img src="images/our-story/germany/DSC04356.JPG" /></a>
+												<a href="images/our-story/germany/DSC04357.JPG"><img src="images/our-story/germany/DSC04357.JPG" /></a>
+												<a href="images/our-story/germany/DSC04358.JPG"><img src="images/our-story/germany/DSC04358.JPG" /></a>
+												<a href="images/our-story/germany/DSC04372.JPG"><img src="images/our-story/germany/DSC04372.JPG" /></a>
+												<a href="images/our-story/germany/DSC04375.JPG"><img src="images/our-story/germany/DSC04375.JPG" /></a>
+												<a href="images/our-story/germany/DSC04377.JPG"><img src="images/our-story/germany/DSC04377.JPG" /></a>
+												<a href="images/our-story/germany/DSC04387.JPG"><img src="images/our-story/germany/DSC04387.JPG" /></a>
+												<a href="images/our-story/germany/DSC04389.JPG"><img src="images/our-story/germany/DSC04389.JPG" /></a>
+												<a href="images/our-story/germany/DSC04400.JPG"><img src="images/our-story/germany/DSC04400.JPG" /></a>
+												<a href="images/our-story/germany/DSC04406.JPG"><img src="images/our-story/germany/DSC04406.JPG" /></a>
+												<a href="images/our-story/germany/DSC04442.JPG"><img src="images/our-story/germany/DSC04442.JPG" /></a>
+												<a href="images/our-story/germany/DSC04454.JPG"><img src="images/our-story/germany/DSC04454.JPG" /></a>
+												<a href="images/our-story/germany/DSC04456.JPG"><img src="images/our-story/germany/DSC04456.JPG" /></a>
+												<a href="images/our-story/germany/DSC04468.JPG"><img src="images/our-story/germany/DSC04468.JPG" /></a>
+												<a href="images/our-story/germany/DSC04472.JPG"><img src="images/our-story/germany/DSC04472.JPG" /></a>
+												<a href="images/our-story/germany/DSC04473.JPG"><img src="images/our-story/germany/DSC04473.JPG" /></a>
+												<a href="images/our-story/germany/DSC04516.JPG"><img src="images/our-story/germany/DSC04516.JPG" /></a>
+												<a href="images/our-story/germany/DSC04554.JPG"><img src="images/our-story/germany/DSC04554.JPG" /></a>
+												<a href="images/our-story/germany/DSC04529.JPG"><img src="images/our-story/germany/DSC04529.JPG" /></a>
+												<a href="images/our-story/germany/DSC04534.JPG"><img src="images/our-story/germany/DSC04534.JPG" /></a>
+												<a href="images/our-story/germany/DSC04583.JPG"><img src="images/our-story/germany/DSC04583.JPG" /></a>
+												<a href="images/our-story/germany/DSC04587.JPG"><img src="images/our-story/germany/DSC04587.JPG" /></a>
+												<a href="images/our-story/germany/DSC04588.JPG"><img src="images/our-story/germany/DSC04588.JPG" /></a>
+												<a href="images/our-story/germany/DSC04686.JPG"><img src="images/our-story/germany/DSC04686.JPG" /></a>
+												<a href="images/our-story/germany/DSC04691.JPG"><img src="images/our-story/germany/DSC04691.JPG" /></a>
+												<a href="images/our-story/germany/DSC04703.JPG"><img src="images/our-story/germany/DSC04703.JPG" /></a>
+												<a href="images/our-story/germany/DSC04708.JPG"><img src="images/our-story/germany/DSC04708.JPG" /></a>
+												<a href="images/our-story/germany/DSC04715.JPG"><img src="images/our-story/germany/DSC04715.JPG" /></a>
+												<a href="images/our-story/germany/DSC04727.JPG"><img src="images/our-story/germany/DSC04727.JPG" /></a>
+												<a href="images/our-story/germany/DSC04766.JPG"><img src="images/our-story/germany/DSC04766.JPG" /></a>
+												<a href="images/our-story/germany/DSC04767.JPG"><img src="images/our-story/germany/DSC04767.JPG" /></a>
+												<a href="images/our-story/germany/DSC04772.JPG"><img src="images/our-story/germany/DSC04772.JPG" /></a>
+												<a href="images/our-story/germany/DSC04801.JPG"><img src="images/our-story/germany/DSC04801.JPG" /></a>
+												<a href="images/our-story/germany/DSC04816.JPG"><img src="images/our-story/germany/DSC04816.JPG" /></a>
+												<a href="images/our-story/germany/DSC04821.JPG"><img src="images/our-story/germany/DSC04821.JPG" /></a>
+												<a href="images/our-story/germany/DSC04828.JPG"><img src="images/our-story/germany/DSC04828.JPG" /></a>
+												<a href="images/our-story/germany/DSC04833.JPG"><img src="images/our-story/germany/DSC04833.JPG" /></a>
+												<a href="images/our-story/germany/DSC04835.JPG"><img src="images/our-story/germany/DSC04835.JPG" /></a>
+												<a href="images/our-story/germany/DSC04836.JPG"><img src="images/our-story/germany/DSC04836.JPG" /></a>
+												<a href="images/our-story/germany/DSC04842.JPG"><img src="images/our-story/germany/DSC04842.JPG" /></a>
+												<a href="images/our-story/germany/DSC04847.JPG"><img src="images/our-story/germany/DSC04847.JPG" /></a>
+												<a href="images/our-story/germany/DSC04849.JPG"><img src="images/our-story/germany/DSC04849.JPG" /></a>
+												<a href="images/our-story/germany/DSC04858.JPG"><img src="images/our-story/germany/DSC04858.JPG" /></a>
+											</p>
 										</div> <!-- cd-timeline-content -->
 									</div> <!-- cd-timeline-block -->
 
@@ -183,6 +258,10 @@
 								</li>
 								<li class="icon fa-code">
 									<h3>Mus Scelerisque</h3>
+									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								</li>
+								<li class="icon fa-headphones">
+									<h3>Mauris Imperdiet</h3>
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
 							</ul>
