Removing images, adding lightbox functionality, and fixing minor styles one timeline

--- a/home.html
+++ b/home.html
@@ -12,6 +12,7 @@
     <meta name="description" content="'Choose a seat not a side. We’re all family once the knot is tied.' - Your invited to Kenneth and Mariko's wedding. Here you will find all of the information necessary for our wedding. if you have any qeustions regarding the cermony, please feel free to contact us via email or in person.">
 		<link rel="shortcut icon" href="favicon.ico">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/chocolat.css" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
@@ -68,7 +69,7 @@
 						<div class="inner">
 							<header class="major">
 
-								<h2>Our story</h2>
+								<h2 class="title-decoration">Our story</h2>
 
 								<!-- Timeline -->
 								<div id="cd-timeline">
@@ -133,60 +134,8 @@
 										<div class="cd-timeline-content">
 											<h2>Bier! Und du? </h2>
 											<span class="cd-date">Sep 24 - Oct 3, 2015</span>
-											<p>
-												<a href="images/our-story/germany/DSC03882.JPG"><img src="images/our-story/germany/DSC03882.JPG" /></a>
-												<a href="images/our-story/germany/DSC03884.JPG"><img src="images/our-story/germany/DSC03884.JPG" /></a>
-												<a href="images/our-story/germany/DSC03908.JPG"><img src="images/our-story/germany/DSC03908.JPG" /></a>
-												<a href="images/our-story/germany/DSC03930.JPG"><img src="images/our-story/germany/DSC03930.JPG" /></a>
-												<a href="images/our-story/germany/DSC03967.JPG"><img src="images/our-story/germany/DSC03967.JPG" /></a>
-												<a href="images/our-story/germany/DSC03997.JPG"><img src="images/our-story/germany/DSC03997.JPG" /></a>
-												<a href="images/our-story/germany/DSC04011.JPG"><img src="images/our-story/germany/DSC04011.JPG" /></a>
-												<a href="images/our-story/germany/DSC04014.JPG"><img src="images/our-story/germany/DSC04014.JPG" /></a>
-												<a href="images/our-story/germany/DSC04095.JPG"><img src="images/our-story/germany/DSC04095.JPG" /></a>
-												<a href="images/our-story/germany/DSC04098.JPG"><img src="images/our-story/germany/DSC04098.JPG" /></a>
-												<a href="images/our-story/germany/DSC04103.JPG"><img src="images/our-story/germany/DSC04103.JPG" /></a>
-												<a href="images/our-story/germany/DSC04132.JPG"><img src="images/our-story/germany/DSC04132.JPG" /></a>
-												<a href="images/our-story/germany/DSC04134.JPG"><img src="images/our-story/germany/DSC04134.JPG" /></a>
-												<a href="images/our-story/germany/DSC04163.JPG"><img src="images/our-story/germany/DSC04163.JPG" /></a>
-												<a href="images/our-story/germany/DSC04255.JPG"><img src="images/our-story/germany/DSC04255.JPG" /></a>
-												<a href="images/our-story/germany/DSC04256.JPG"><img src="images/our-story/germany/DSC04256.JPG" /></a>
-												<a href="images/our-story/germany/DSC04261.JPG"><img src="images/our-story/germany/DSC04261.JPG" /></a>
-												<a href="images/our-story/germany/DSC04279.JPG"><img src="images/our-story/germany/DSC04279.JPG" /></a>
-												<a href="images/our-story/germany/DSC04295.JPG"><img src="images/our-story/germany/DSC04295.JPG" /></a>
-												<a href="images/our-story/germany/DSC04296.JPG"><img src="images/our-story/germany/DSC04296.JPG" /></a>
-												<a href="images/our-story/germany/DSC04297.JPG"><img src="images/our-story/germany/DSC04297.JPG" /></a>
-												<a href="images/our-story/germany/DSC04311.JPG"><img src="images/our-story/germany/DSC04311.JPG" /></a>
-												<a href="images/our-story/germany/DSC04313.JPG"><img src="images/our-story/germany/DSC04313.JPG" /></a>
-												<a href="images/our-story/germany/DSC04346.JPG"><img src="images/our-story/germany/DSC04346.JPG" /></a>
-												<a href="images/our-story/germany/DSC04356.JPG"><img src="images/our-story/germany/DSC04356.JPG" /></a>
-												<a href="images/our-story/germany/DSC04357.JPG"><img src="images/our-story/germany/DSC04357.JPG" /></a>
-												<a href="images/our-story/germany/DSC04358.JPG"><img src="images/our-story/germany/DSC04358.JPG" /></a>
-												<a href="images/our-story/germany/DSC04375.JPG"><img src="images/our-story/germany/DSC04375.JPG" /></a>
-												<a href="images/our-story/germany/DSC04377.JPG"><img src="images/our-story/germany/DSC04377.JPG" /></a>
-												<a href="images/our-story/germany/DSC04387.JPG"><img src="images/our-story/germany/DSC04387.JPG" /></a>
-												<a href="images/our-story/germany/DSC04389.JPG"><img src="images/our-story/germany/DSC04389.JPG" /></a>
-												<a href="images/our-story/germany/DSC04400.JPG"><img src="images/our-story/germany/DSC04400.JPG" /></a>
-												<a href="images/our-story/germany/DSC04406.JPG"><img src="images/our-story/germany/DSC04406.JPG" /></a>
-												<a href="images/our-story/germany/DSC04454.JPG"><img src="images/our-story/germany/DSC04454.JPG" /></a>
-												<a href="images/our-story/germany/DSC04468.JPG"><img src="images/our-story/germany/DSC04468.JPG" /></a>
-												<a href="images/our-story/germany/DSC04472.JPG"><img src="images/our-story/germany/DSC04472.JPG" /></a>
-												<a href="images/our-story/germany/DSC04516.JPG"><img src="images/our-story/germany/DSC04516.JPG" /></a>
-												<a href="images/our-story/germany/DSC04554.JPG"><img src="images/our-story/germany/DSC04554.JPG" /></a>
-												<a href="images/our-story/germany/DSC04529.JPG"><img src="images/our-story/germany/DSC04529.JPG" /></a>
-												<a href="images/our-story/germany/DSC04534.JPG"><img src="images/our-story/germany/DSC04534.JPG" /></a>
-												<a href="images/our-story/germany/DSC04583.JPG"><img src="images/our-story/germany/DSC04583.JPG" /></a>
-												<a href="images/our-story/germany/DSC04587.JPG"><img src="images/our-story/germany/DSC04587.JPG" /></a>
-												<a href="images/our-story/germany/DSC04588.JPG"><img src="images/our-story/germany/DSC04588.JPG" /></a>
-												<a href="images/our-story/germany/DSC04686.JPG"><img src="images/our-story/germany/DSC04686.JPG" /></a>
-												<a href="images/our-story/germany/DSC04691.JPG"><img src="images/our-story/germany/DSC04691.JPG" /></a>
-												<a href="images/our-story/germany/DSC04703.JPG"><img src="images/our-story/germany/DSC04703.JPG" /></a>
-												<a href="images/our-story/germany/DSC04708.JPG"><img src="images/our-story/germany/DSC04708.JPG" /></a>
-												<a href="images/our-story/germany/DSC04715.JPG"><img src="images/our-story/germany/DSC04715.JPG" /></a>
-												<a href="images/our-story/germany/DSC04727.JPG"><img src="images/our-story/germany/DSC04727.JPG" /></a>
-												<a href="images/our-story/germany/DSC04767.JPG"><img src="images/our-story/germany/DSC04767.JPG" /></a>
-												<a href="images/our-story/germany/DSC04836.JPG"><img src="images/our-story/germany/DSC04836.JPG" /></a>
-												<a href="images/our-story/germany/DSC04842.JPG"><img src="images/our-story/germany/DSC04842.JPG" /></a>
-												<a href="images/our-story/germany/DSC04858.JPG"><img src="images/our-story/germany/DSC04858.JPG" /></a>
+											<p class="chocolat-parent" data-chocolat-title="set title">
+												<a href="images/our-story/germany/DSC03908.JPG" class="chocolat-image" title="caption image 1"><img src="images/our-story/germany/DSC03908.JPG" /></a>
 											</p>
 										</div> <!-- cd-timeline-content -->
 									</div> <!-- cd-timeline-block -->
@@ -287,6 +236,7 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/modernizr.js"></script>
+			<script src="assets/js/jquery.chocolat.js"></script>
 			<script src="assets/js/main.js"></script>
 
 	</body>
