--- a/home.html
+++ b/home.html
@@ -71,8 +71,18 @@
 									<div class="cd-timeline-block">
 										<div class="cd-timeline-img"></div>
 										<div class="cd-timeline-content">
-											<h2>Cafe hopping</h2>
+											<h2>PSP &amp; coffee dates</h2>
 											<span class="cd-date">Aug 24, 2012</span>
+											<p class="chocolat-parent" data-chocolat-title="PSP & coffee dates">
+												<!-- Image -->
+												<a href="images/our-story/1-PSP&CoffeeDates/DSC00076.JPG" class="chocolat-image" title=""><img src="images/our-story/1-PSP&CoffeeDates/DSC00076.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/1-PSP&CoffeeDates/IMG_20160123_114208.jpg" class="chocolat-image" title=""><img src="images/our-story/1-PSP&CoffeeDates/IMG_20160123_114208.jpg" /></a>
+												<!-- Image -->
+												<a href="images/our-story/1-PSP&CoffeeDates/noname.jpg" class="chocolat-image" title=""><img src="images/our-story/1-PSP&CoffeeDates/noname.jpg" /></a>
+												<!-- Image -->
+												<a href="images/our-story/1-PSP&CoffeeDates/WP_000151.jpg" class="chocolat-image" title=""><img src="images/our-story/1-PSP&CoffeeDates/WP_000151.jpg" /></a>
+											</p>
 										</div> <!-- cd-timeline-content -->
 									</div> <!-- cd-timeline-block -->
 
@@ -81,14 +91,32 @@
 										<div class="cd-timeline-content">
 											<h2>Will you go out with me?</h2>
 											<span class="cd-date">Oct 20, 2012</span>
-										</div> <!-- cd-timeline-content -->
-									</div> <!-- cd-timeline-block -->
-
-									<div class="cd-timeline-block">
-										<div class="cd-timeline-img"></div>
-										<div class="cd-timeline-content">
-											<h2>Terrifying first date</h2>
-											<span class="cd-date">Oct 27, 2012</span>
+											<p class="chocolat-parent" data-chocolat-title="Will you go out with me?">
+												<!-- Image -->
+												<a href="images/our-story/2-DatesandSuch/1120010_10151775223924819_1549113658_o.jpg" class="chocolat-image" title=""><img src="images/our-story/2-DatesandSuch/1120010_10151775223924819_1549113658_o.jpg" /></a>
+												<!-- Image -->
+												<a href="images/our-story/2-DatesandSuch/DSC00294.JPG" class="chocolat-image" title=""><img src="images/our-story/2-DatesandSuch/DSC00294.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/2-DatesandSuch/DSC00521.JPG" class="chocolat-image" title=""><img src="images/our-story/2-DatesandSuch/DSC00521.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/2-DatesandSuch/DSC00659.JPG" class="chocolat-image" title=""><img src="images/our-story/2-DatesandSuch/DSC00659.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/2-DatesandSuch/DSC00781.JPG" class="chocolat-image" title=""><img src="images/our-story/2-DatesandSuch/DSC00781.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/2-DatesandSuch/DSC01254.JPG" class="chocolat-image" title=""><img src="images/our-story/2-DatesandSuch/DSC01254.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/2-DatesandSuch/IMG_1192.JPG" class="chocolat-image" title=""><img src="images/our-story/2-DatesandSuch/IMG_1192.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/2-DatesandSuch/IMG_1497.JPG" class="chocolat-image" title=""><img src="images/our-story/2-DatesandSuch/IMG_1497.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/2-DatesandSuch/IMG_6257.JPG" class="chocolat-image" title=""><img src="images/our-story/2-DatesandSuch/IMG_6257.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/2-DatesandSuch/IMG_6468.JPG" class="chocolat-image" title=""><img src="images/our-story/2-DatesandSuch/IMG_6468.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/2-DatesandSuch/IMG_6675.JPG" class="chocolat-image" title=""><img src="images/our-story/2-DatesandSuch/IMG_6675.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/2-DatesandSuch/IMG_6718.JPG" class="chocolat-image" title=""><img src="images/our-story/2-DatesandSuch/IMG_6718.JPG" /></a>
+											</p>
 										</div> <!-- cd-timeline-content -->
 									</div> <!-- cd-timeline-block -->
 
@@ -97,6 +125,14 @@
 										<div class="cd-timeline-content">
 											<h2>Vroom vroom to Canada</h2>
 											<span class="cd-date">Apr 15, 2013</span>
+											<p class="chocolat-parent" data-chocolat-title="Vroom vroom to Canada">
+												<!-- Image -->
+												<a href="images/our-story/3-Canada/IMG_1058.JPG" class="chocolat-image" title=""><img src="images/our-story/3-Canada/IMG_1058.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/3-Canada/IMG_6508.JPG" class="chocolat-image" title=""><img src="images/our-story/3-Canada/IMG_6508.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/3-Canada/IMG_6526.JPG" class="chocolat-image" title=""><img src="images/our-story/3-Canada/IMG_6526.JPG" /></a>
+											</p>
 										</div> <!-- cd-timeline-content -->
 									</div> <!-- cd-timeline-block -->
 
@@ -105,6 +141,12 @@
 										<div class="cd-timeline-content">
 											<h2>Will you marry me?</h2>
 											<span class="cd-date">Aug 3, 2014</span>
+											<p class="chocolat-parent" data-chocolat-title="Will you marry me?">
+												<!-- Image -->
+												<a href="images/our-story/4-Proposal/DSC01435.JPG" class="chocolat-image" title=""><img src="images/our-story/4-Proposal/DSC01435.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/4-Proposal/WP_20140803_10_02_33_Pro.jpg" class="chocolat-image" title=""><img src="images/our-story/4-Proposal/WP_20140803_10_02_33_Pro.jpg" /></a>
+											</p>
 										</div> <!-- cd-timeline-content -->
 									</div> <!-- cd-timeline-block -->
 
@@ -113,14 +155,46 @@
 										<div class="cd-timeline-content">
 											<h2>To the land of fire and ice</h2>
 											<span class="cd-date">Aug 3 - Aug 10, 2014</span>
+											<p class="chocolat-parent" data-chocolat-title="To the land of fire and ice">
+												<!-- Image -->
+												<a href="images/our-story/5-Iceland/DSC01596.JPG" class="chocolat-image" title=""><img src="images/our-story/5-Iceland/DSC01596.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/5-Iceland/DSC01662.JPG" class="chocolat-image" title=""><img src="images/our-story/5-Iceland/DSC01662.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/5-Iceland/DSC02001.JPG" class="chocolat-image" title=""><img src="images/our-story/5-Iceland/DSC02001.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/5-Iceland/DSC02067.JPG" class="chocolat-image" title=""><img src="images/our-story/5-Iceland/DSC02067.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/5-Iceland/DSC02255.JPG" class="chocolat-image" title=""><img src="images/our-story/5-Iceland/DSC02255.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/5-Iceland/DSC02409.JPG" class="chocolat-image" title=""><img src="images/our-story/5-Iceland/DSC02409.JPG" /></a>
+											</p>
 										</div> <!-- cd-timeline-content -->
 									</div> <!-- cd-timeline-block -->
 
 									<div class="cd-timeline-block">
 										<div class="cd-timeline-img"></div>
 										<div class="cd-timeline-content">
-											<h2>Meeting of the families</h2>
+											<h2>Celebrating and more fun!</h2>
 											<span class="cd-date">Aug 30, 2014</span>
+											<p class="chocolat-parent" data-chocolat-title="Celebrating and more fun!">
+												<!-- Image -->
+												<a href="images/our-story/6-CelebratingandMoreFun/DSC02586.JPG" class="chocolat-image" title=""><img src="images/our-story/6-CelebratingandMoreFun/DSC02586.JPG" /></a>
+												<a href="images/our-story/6-CelebratingandMoreFun/DSC02635.JPG" class="chocolat-image" title=""><img src="images/our-story/6-CelebratingandMoreFun/DSC02635.JPG" /></a>
+												<a href="images/our-story/6-CelebratingandMoreFun/DSC02699.JPG" class="chocolat-image" title=""><img src="images/our-story/6-CelebratingandMoreFun/DSC02699.JPG" /></a>
+												<a href="images/our-story/6-CelebratingandMoreFun/DSC02700.JPG" class="chocolat-image" title=""><img src="images/our-story/6-CelebratingandMoreFun/DSC02700.JPG" /></a>
+												<a href="images/our-story/6-CelebratingandMoreFun/DSC03065.JPG" class="chocolat-image" title=""><img src="images/our-story/6-CelebratingandMoreFun/DSC03065.JPG" /></a>
+												<a href="images/our-story/6-CelebratingandMoreFun/DSC03088.JPG" class="chocolat-image" title=""><img src="images/our-story/6-CelebratingandMoreFun/DSC03088.JPG" /></a>
+												<a href="images/our-story/6-CelebratingandMoreFun/DSC03362.JPG" class="chocolat-image" title=""><img src="images/our-story/6-CelebratingandMoreFun/DSC03362.JPG" /></a>
+												<a href="images/our-story/6-CelebratingandMoreFun/DSC03854.JPG" class="chocolat-image" title=""><img src="images/our-story/6-CelebratingandMoreFun/DSC03854.JPG" /></a>
+												<a href="images/our-story/6-CelebratingandMoreFun/IMG_2146.JPG" class="chocolat-image" title=""><img src="images/our-story/6-CelebratingandMoreFun/IMG_2146.JPG" /></a>
+												<a href="images/our-story/6-CelebratingandMoreFun/IMG_2182.JPG" class="chocolat-image" title=""><img src="images/our-story/6-CelebratingandMoreFun/IMG_2182.JPG" /></a>
+												<a href="images/our-story/6-CelebratingandMoreFun/IMG_2213.JPG" class="chocolat-image" title=""><img src="images/our-story/6-CelebratingandMoreFun/IMG_2213.JPG" /></a>
+												<a href="images/our-story/6-CelebratingandMoreFun/IMG_2284.JPG" class="chocolat-image" title=""><img src="images/our-story/6-CelebratingandMoreFun/IMG_2284.JPG" /></a>
+												<a href="images/our-story/6-CelebratingandMoreFun/IMG_2353.JPG" class="chocolat-image" title=""><img src="images/our-story/6-CelebratingandMoreFun/IMG_2353.JPG" /></a>
+												<a href="images/our-story/6-CelebratingandMoreFun/IMG_2411.JPG" class="chocolat-image" title=""><img src="images/our-story/6-CelebratingandMoreFun/IMG_2411.JPG" /></a>
+												<a href="images/our-story/6-CelebratingandMoreFun/IMG_2507.JPG" class="chocolat-image" title=""><img src="images/our-story/6-CelebratingandMoreFun/IMG_2507.JPG" /></a>
+											</p>
 										</div> <!-- cd-timeline-content -->
 									</div> <!-- cd-timeline-block -->
 
@@ -129,8 +203,27 @@
 										<div class="cd-timeline-content">
 											<h2>Bier! Und du? </h2>
 											<span class="cd-date">Sep 24 - Oct 3, 2015</span>
-											<p class="chocolat-parent" data-chocolat-title="set title">
-												<a href="images/our-story/germany/DSC03908.JPG" class="chocolat-image" title="caption image 1"><img src="images/our-story/germany/DSC03908.JPG" /></a>
+											<p class="chocolat-parent" data-chocolat-title="Bier! Und du?">
+												<!-- Image -->
+												<a href="images/our-story/7-Germany/DSC03908.JPG" class="chocolat-image" title=""><img src="images/our-story/7-Germany/DSC03908.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/7-Germany/DSC03967.JPG" class="chocolat-image" title=""><img src="images/our-story/7-Germany/DSC03967.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/7-Germany/DSC04103.JPG" class="chocolat-image" title=""><img src="images/our-story/7-Germany/DSC04103.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/7-Germany/DSC04255.JPG" class="chocolat-image" title=""><img src="images/our-story/7-Germany/DSC04255.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/7-Germany/DSC04400.JPG" class="chocolat-image" title=""><img src="images/our-story/7-Germany/DSC04400.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/7-Germany/DSC04501.JPG" class="chocolat-image" title=""><img src="images/our-story/7-Germany/DSC04501.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/7-Germany/DSC04530.JPG" class="chocolat-image" title=""><img src="images/our-story/7-Germany/DSC04530.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/7-Germany/DSC04588.JPG" class="chocolat-image" title=""><img src="images/our-story/7-Germany/DSC04588.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/7-Germany/DSC04841.JPG" class="chocolat-image" title=""><img src="images/our-story/7-Germany/DSC04841.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/7-Germany/IMG_20150928_094314.jpg" class="chocolat-image" title=""><img src="images/our-story/7-Germany/IMG_20150928_094314.jpg" /></a>
 											</p>
 										</div> <!-- cd-timeline-content -->
 									</div> <!-- cd-timeline-block -->
@@ -138,8 +231,34 @@
 									<div class="cd-timeline-block">
 										<div class="cd-timeline-img"></div>
 										<div class="cd-timeline-content">
-											<h2>Wedding</h2>
+											<h2>Good times!</h2>
+											<span class="cd-date">Jan 7, 2016</span>
+											<p class="chocolat-parent" data-chocolat-title="Good times!">
+												<!-- Image -->
+												<a href="images/our-story/8-MoreFun/DSC05156.JPG" class="chocolat-image" title=""><img src="images/our-story/8-MoreFun/DSC05156.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/8-MoreFun/DSC05312.JPG" class="chocolat-image" title=""><img src="images/our-story/8-MoreFun/DSC05312.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/8-MoreFun/IMG_20160402_130344.jpg" class="chocolat-image" title=""><img src="images/our-story/8-MoreFun/IMG_20160402_130344.jpg" /></a>
+												<!-- Image -->
+												<a href="images/our-story/8-MoreFun/V__8ACD.jpg" class="chocolat-image" title=""><img src="images/our-story/8-MoreFun/V__8ACD.jpg" /></a>
+											</p>
+										</div> <!-- cd-timeline-content -->
+									</div> <!-- cd-timeline-block -->
+
+									<div class="cd-timeline-block">
+										<div class="cd-timeline-img"></div>
+										<div class="cd-timeline-content">
+											<h2>Preparing for the big day</h2>
 											<span class="cd-date">Aug 26, 2016</span>
+											<p class="chocolat-parent" data-chocolat-title="Preparing for the big day">
+												<!-- Image -->
+												<a href="images/our-story/9-Preparing/DSC03039.JPG" class="chocolat-image" title=""><img src="images/our-story/9-Preparing/DSC03039.JPG" /></a>
+												<!-- Image -->
+												<a href="images/our-story/9-Preparing/IMG_20160305_112424.jpg" class="chocolat-image" title=""><img src="images/our-story/9-Preparing/IMG_20160305_112424.jpg" /></a>
+												<!-- Image -->
+												<a href="images/our-story/9-Preparing/IMG_20160306_152546.jpg" class="chocolat-image" title=""><img src="images/our-story/9-Preparing/IMG_20160306_152546.jpg" /></a>
+											</p>
 										</div> <!-- cd-timeline-content -->
 									</div> <!-- cd-timeline-block -->
 
@@ -147,6 +266,9 @@
 										<div class="cd-timeline-img"></div>
 										<div class="cd-timeline-content">
 											<h2>... more adventures await</h2>
+											<p class="chocolat-parent" data-chocolat-title="... more adventures await">
+												<!-- Image -->
+												<a href="images/our-story/10-MoreAdventuresAwait/DSC01076.JPG" class="chocolat-image" title=""><img src="images/our-story/10-MoreAdventuresAwait/DSC01076.JPG" /></a>
 										</div> <!-- cd-timeline-content -->
 									</div> <!-- cd-timeline-block -->
 
