Fixing file extension of broken image

--- a/home.html
+++ b/home.html
@@ -143,7 +143,7 @@
 											<span class="cd-date">Aug 3, 2014</span>
 											<p class="chocolat-parent" data-chocolat-title="Will you marry me?">
 												<!-- Image -->
-												<a href="images/our-story/4-Proposal/DSC01435.JPG" class="chocolat-image" title=""><img src="images/our-story/4-Proposal/DSC01435.JPG" /></a>
+												<a href="images/our-story/4-Proposal/DSC01435.jpg" class="chocolat-image" title=""><img src="images/our-story/4-Proposal/DSC01435.jpg" /></a>
 												<!-- Image -->
 												<a href="images/our-story/4-Proposal/WP_20140803_10_02_33_Pro.jpg" class="chocolat-image" title=""><img src="images/our-story/4-Proposal/WP_20140803_10_02_33_Pro.jpg" /></a>
 											</p>
