Recommitting images just to make sure everything uploaded correctly

--- a/home.html
+++ b/home.html
@@ -193,7 +193,7 @@
 												<a href="images/our-story/6-CelebratingandMoreFun/IMG_2284.JPG" class="chocolat-image" title=""><img src="images/our-story/6-CelebratingandMoreFun/IMG_2284.JPG" /></a>
 												<a href="images/our-story/6-CelebratingandMoreFun/IMG_2353.JPG" class="chocolat-image" title=""><img src="images/our-story/6-CelebratingandMoreFun/IMG_2353.JPG" /></a>
 												<a href="images/our-story/6-CelebratingandMoreFun/IMG_2411.JPG" class="chocolat-image" title=""><img src="images/our-story/6-CelebratingandMoreFun/IMG_2411.JPG" /></a>
-												<a href="images/our-story/6-CelebratingandMoreFun/IMG_2507.JPG" class="chocolat-image" title=""><img src="images/our-story/6-CelebratingandMoreFun/IMG_2507.JPG" /></a>
+												<a href="images/our-story/6-CelebratingandMoreFun/IMG_2507.jpg" class="chocolat-image" title=""><img src="images/our-story/6-CelebratingandMoreFun/IMG_2507.jpg" /></a>
 											</p>
 										</div> <!-- cd-timeline-content -->
 									</div> <!-- cd-timeline-block -->
