Adding lazyload plugin to website. This version is not using the data-original attribute that is required for lazyload

--- a/home.html
+++ b/home.html
@@ -354,6 +354,7 @@
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/modernizr.js"></script>
 			<script src="assets/js/jquery.chocolat.js"></script>
+			<script src="assets/js/jquery.lazyload.js"></script>
 			<script src="assets/js/main.js"></script>
 
 	</body>
