--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
 										<ul>
 											<li><a href="home.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
 											<li><a href="#"><i class="fa fa-heart" aria-hidden="true"></i> Our story</a></li>
-											<li><a href="#"><i class="fa fa-glass" aria-hidden="true"></i> The ceremony</a></li>
+											<li><a href="#"><i class="fa fa-glass" aria-hidden="true"></i> Ceremony details</a></li>
 											<li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i> Map</a></li>
 											<li><a href="#"><i class="fa fa-gift" aria-hidden="true"></i> Gift registration</a></li>
                       <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> Contact us</a></li>
@@ -290,9 +290,8 @@
 					<section id="three" class="wrapper style3 special ceremony">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Ceremony details</h2>
+								<p><img src="images/ceremony-details.svg" alt="Friday, August 26, 2016 - 6 o'clock" class="ceremony-details" /></p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
@@ -301,14 +300,6 @@
 								</li>
 								<li class="icon fa-laptop">
 									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-headphones">
-									<h3>Mauris Imperdiet</h3>
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
 							</ul>
