Adding loader to website

--- a/home.html
+++ b/home.html
@@ -14,6 +14,16 @@
 	</head>
 	<body class="landing">
 
+		<!-- Preloader -->
+		<div class="loader-container">
+      <div class="wrap">
+			  <div class="loading">
+			    <div class="bounceball"></div>
+			    <div class="text">NOW LOADING</div>
+			  </div>
+			</div>
+		</div>
+
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
 
@@ -345,7 +355,7 @@
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/modernizr.js"></script>
 			<script src="assets/js/jquery.chocolat.js"></script>
-			<script src="assets/js/jquery.lazyload.js"></script>
+			<!--<script src="assets/js/jquery.lazyload.js"></script>-->
 			<script src="assets/js/main.js"></script>
 
 	</body>
