--- a/home.html
+++ b/home.html
@@ -16,12 +16,7 @@
 
 		<!-- Preloader -->
 		<div class="loader-container">
-      <div class="wrap">
-			  <div class="loading">
-			    <div class="bounceball"></div>
-			    <div class="text">NOW LOADING</div>
-			  </div>
-			</div>
+			<div class="loader"></div>
 		</div>
 
 		<!-- Page Wrapper -->
