Adding map to website

--- a/home.html
+++ b/home.html
@@ -16,6 +16,7 @@
 
 		<!-- Preloader -->
 		<div class="loader-container">
+			<div class="load-animation"></div>
 			<div class="loader"></div>
 		</div>
 
@@ -64,7 +65,7 @@
 					</section>
 					-->
 
-				<!-- One -->
+				<!-- Our story -->
 					<section id="one" class="wrapper special our-story">
 						<div class="inner">
 							<header class="major">
@@ -291,7 +292,7 @@
 						</div>
 					</section>
 
-				<!-- Three -->
+				<!-- Ceremony -->
 					<section id="three" class="wrapper style3 special ceremony">
 						<div class="inner">
 							<header class="major">
@@ -311,7 +312,11 @@
 						</div>
 					</section>
 
-				<!-- CTA -->
+				<!-- Maps -->
+					<section id="googleMap" class="wrapper map">
+					</section>
+
+				<!-- Registry -->
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
@@ -351,7 +356,8 @@
 			<script src="assets/js/modernizr.js"></script>
 			<script src="assets/js/jquery.chocolat.js"></script>
 			<!--<script src="assets/js/jquery.lazyload.js"></script>-->
+			<script src="https://maps.googleapis.com/maps/api/js?callback=initMap" async defer></script>
 			<script src="assets/js/main.js"></script>
-
+    </script>
 	</body>
 </html>
